fix: Updated: cart.js: Adjust Cart-Btn visibility

--- a/static/cart.css
+++ b/static/cart.css
@@ -104,6 +104,8 @@
 }
 
 .cart-btn {
+    display: none;
+    width: 100%;
     height: 100px;
     margin: 32px 0;
     background: #ff8000;
@@ -112,6 +114,11 @@
     border: none;
     border-radius: 16px;
     font-size: 24px;
+}
+@media (max-width: 1100px) {
+    .cart-btn {
+        display: block;
+    }
 }
 
 .value {
